create main scaffold; clean things up

--- a/app/assets/scss/themes/default/index.scss
+++ b/app/assets/scss/themes/default/index.scss
@@ -2,5 +2,5 @@
 @import './../../component/functions';
 @import './../../component/mixins/media';
 
-@import 'dashboard';
+@import 'landingpage';
 @import 'toolbar';
