--- a/app/templates/html_header.html.twig
+++ b/app/templates/html_header.html.twig
@@ -2,8 +2,8 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>{% block title %}Sebastian | Developer{% endblock %}</title>
-	<link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
+	<title>{% block title %}Sebastian Meiser| Web Developer{% endblock %}</title>
+	<link rel="icon" href="/build/images/favicon.svg">
 
 	{% block stylesheets %}
 		{{ encore_entry_link_tags('css-libs') }}
@@ -12,9 +12,22 @@
 
 	{% block javascripts %}
 		{{ encore_entry_script_tags('app') }}
+
+		<!-- Renders app.js & a webpack runtime.js file
+			<script src="/build/runtime.js" defer></script>
+			<script src="/build/app.js" defer></script>
+			See note below about the "defer" attribute -->
+
 	{% endblock %}
 </head>
 <body>
-{% block body %}{% endblock %}
+
+<!-- Body content -->
+<div class="container mt-5 mb-5 vh-100">
+	<div class="row h-100 rounded-4 content-background-color content-box-shadow">
+		{% block body %}{% endblock %}
+	</div>
+</div>
+
 </body>
 </html>
