--- a/app/templates/html_header.html.twig
+++ b/app/templates/html_header.html.twig
@@ -6,7 +6,7 @@
 	<link rel="icon" href="/build/images/favicon.svg">
 
 	{% block stylesheets %}
-		{{ encore_entry_link_tags('css-libs') }}
+		{{ encore_entry_link_tags('bootstrap-framework') }}
 		{{ encore_entry_link_tags('css-theme-default') }}
 	{% endblock %}
 
@@ -23,7 +23,7 @@
 <body>
 
 <!-- Body content -->
-<div class="container mt-5 mb-5 vh-100">
+<div class="container mt-5 mb-5 vh-100 ">
 	<div class="row h-100 rounded-4 content-background-color content-box-shadow">
 		{% block body %}{% endblock %}
 	</div>
