--- a/app/templates/landingpage.html.twig
+++ b/app/templates/landingpage.html.twig
@@ -1,7 +1,16 @@
-{% extends './html_header.html.twig' %}
+{% extends 'html_header.html.twig' %}
 
 {% block body %}
-<div data-controller="landingpage">
+	<div id="threejscontainer"></div>
+	<div id="menu">
+		<button id="table">TABLE</button>
+		<button id="sphere">SPHERE</button>
+		<button id="helix">HELIX</button>
+		<button id="grid">GRID</button>
+	</div>
+
+	<div class="col-3 cursorasd cursorasd-pointer"
+	 data-controller="landingpage">
 	Content
 </div>
 {% endblock %}
