--- a/app/templates/html_header.html.twig
+++ b/app/templates/html_header.html.twig
@@ -24,9 +24,10 @@
 
 <!-- Body content -->
 <div class="container mt-5 mb-5 vh-100 ">
-	<div class="row h-100 rounded-4 content-background-color content-box-shadow">
-		{% block body %}{% endblock %}
-	</div>
+	{% block body %}{% endblock %}
+{#	<div id="three-content" class="row h-100 rounded-4 content-background-color content-box-shadow">
+
+	</div>#}
 </div>
 
 </body>
