--- a/app/templates/landingpage.html.twig
+++ b/app/templates/landingpage.html.twig
@@ -1,8 +1,8 @@
 {% extends 'html_header.html.twig' %}
 
 {% block body %}
-
-	<div data-controller="landingpage"></div>
+	<div data-controller="landingpage">
+	</div>
 {% endblock %}
 
 {% block javascripts %}
