--- a/app/templates/landingpage.html.twig
+++ b/app/templates/landingpage.html.twig
@@ -1,7 +1,15 @@
 {% extends 'html_header.html.twig' %}
 
 {% block body %}
-	<div data-controller="landingpage">
+	<div class="basicContainer" style="">
+		<div class="animateContainer">
+			<div class="col-1 row vh-100 rounded-4 content-background-color content-box-shadow">
+				<div class="col-1 text-white">
+					Das ist ein test<br>
+					<a href="https://www.google.de">Google Link</a>
+				</div>
+			</div>
+		</div>
 	</div>
 {% endblock %}
 
