--- a/app/assets/scss/themes/default/landingpage.scss
+++ b/app/assets/scss/themes/default/landingpage.scss
@@ -10,32 +10,24 @@ body {
     font-family: "Roboto", sans-serif;
     font-size: rem(14px);
     background: #c2c7bf;
-/*    background: rgb(109,122,96);
-    background: linear-gradient(145deg, rgba(109,122,96,1) 0%, rgba(55,64,56,1) 50%, rgba(33,41,41,1) 100%);*/
 }
 
 
-.content-background-color {
-    /*background-color: rgb(13 16 21 / 80%);*/
-    /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#090d12+0,1c2f35+100 */
-    background: #090d12; /* Old browsers */
-    background: -moz-linear-gradient(27deg,  #090d12 0%, #1c2f35 100%); /* FF3.6-15 */
-    background: -webkit-linear-gradient(27deg,  #090d12 0%,#1c2f35 100%); /* Chrome10-25,Safari5.1-6 */
-    background: linear-gradient(27deg,  #090d12 0%,#1c2f35 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#090d12', endColorstr='#1c2f35',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+/*.content-background-color {
+    !*background-color: rgb(13 16 21 / 80%);*!
+    !* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#090d12+0,1c2f35+100 *!
+    background: #090d12; !* Old browsers *!
+    background: -moz-linear-gradient(27deg,  #090d12 0%, #1c2f35 100%); !* FF3.6-15 *!
+    background: -webkit-linear-gradient(27deg,  #090d12 0%,#1c2f35 100%); !* Chrome10-25,Safari5.1-6 *!
+    background: linear-gradient(27deg,  #090d12 0%,#1c2f35 100%); !* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ *!
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#090d12', endColorstr='#1c2f35',GradientType=1 ); !* IE6-9 fallback on horizontal gradient *!
 
 }
 
 .content-box-shadow {
     -webkit-box-shadow: 0 80px 100px -10px #000000;
     box-shadow: 0 80px 100px -10px #000000;
-}
-
-
-#topLeft {
-    position: fixed;
-    top: 0;
-}
+}*/
 
 .obit-controls-gizmo {
     position: absolute;
@@ -58,15 +50,9 @@ body {
     background-color: #FFF0  !important;
 }
 
-.debugContainer {
+.basicContainer {
+    overflow: hidden;
     position: absolute;
-    width: 1400px;
-    border: 1px solid red;
-    height: 500px;
-    left:0;
-    right:0;
-
-    margin-left: auto;
-    margin-right: auto;
-
+    top: 0;
+    touch-action: none;
 }
