--- a/app/templates/html_header.html.twig
+++ b/app/templates/html_header.html.twig
@@ -21,7 +21,10 @@
 	{% endblock %}
 </head>
 <body>
-
+<div class="debugContainer">
+	Das ist ein test<br>
+	<a href="https://www.google.de">Google Link</a>
+</div>
 <!-- Body content -->
 <div id="mainContainer" data-controller="landingpage">
 	{% block body %}{% endblock %}
