[WIP] Configuration adjustments

--- a/app/templates/landingpage.html.twig
+++ b/app/templates/landingpage.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
 	<div class="basicContainer" style="">
 		<div class="animateContainer">
-			<div class="col-1 row vh-100 rounded-4 content-background-color content-box-shadow" style="border: 1px solid orangered">
+			<div class="row vh-100 rounded-4 content-background-color content-box-shadow" style="border: 1px solid orangered">
 				<div class="col-1 text-white">
 					Das ist ein test<br>
 					<a href="https://www.google.de">Google Link</a>
