--- a/app/templates/landingpage.html.twig
+++ b/app/templates/landingpage.html.twig
@@ -1,11 +1,11 @@
 {% extends 'html_header.html.twig' %}
 
 {% block body %}
-	<div class="basicContainer" style="">
+	<div class="basicContainer">
 		<div class="animateContainer">
-			<div class="row vh-100 rounded-4 content-background-color content-box-shadow" style="border: 1px solid orangered">
-				<div class="col-1 text-white">
-					Das ist ein test<br>
+			<div class="rounded-4 content-background-color content-box-shadow test">
+				<div class="text-white">
+					Das ist ein tesasdasdast<br>
 					<a href="https://www.google.de">Google Link</a>
 				</div>
 			</div>
