[WIP] Free CSS3D Renderer with native html code

--- a/app/assets/scss/themes/default/landingpage.scss
+++ b/app/assets/scss/themes/default/landingpage.scss
@@ -10,6 +10,7 @@ body {
     font-family: "Roboto", sans-serif;
     font-size: rem(16px);
     background: #c2c7bf;
+    overflow: hidden;
 }
 
 
@@ -49,36 +50,19 @@ body {
     pointer-events: none;
     background-color: #FFF0  !important;
 }
-/*.animateContainer {
-    //transform-style: preserve-3d;
-    //pointer-events: none;
-    //width: 1920px;
-    //height: 675px;
-    //transform: scale(0.888889) translate(0px, 0px) matrix3d(1, 0, 0, 0, 0, -1, 0, 0, 0, 0, 1, 0, 0, 496.25, -1000, 1) translate(960px, 337.5px);
-}*/
-/*.basicContainer {
-    //position: absolute;
-    //overflow: hidden;
-    //width: 1920px;
-    //height: 675px;
-    //position: absolute;
-    //touch-action: none;
-}*/
-.test{
-/*    width: 500px;
-    height: 500px;
-    position: absolute;
-    pointer-events: auto;
-    user-select: none;
-    border: 1px solid rebeccapurple;
-    transform: translate(-50%, -50%) matrix3d(1, 0, 0, 0, 0, -1, 0, 0, 0, 0, 1, 0, 0, 496.25, 0, 1);*/
+
+#mainContainer {
+    overflow: hidden;
+    touch-action: none;
 }
 .basicContainer {
     position: absolute;
-    border: 1px solid rebeccapurple;
+    pointer-events: none;
 }
 .animateContainer {
     position: absolute;
+    pointer-events: auto;
+    user-select: none;
 }
 
 .debugContainer {
