--- a/app/templates/landingpage.html.twig
+++ b/app/templates/landingpage.html.twig
@@ -1,13 +1,14 @@
 {% extends 'html_header.html.twig' %}
 
 {% block body %}
-	<div class="basicContainer">
-		<div class="animateContainer">
-			<div class="rounded-4 content-background-color content-box-shadow test">
-				<div class="text-white">
+	<div class="cameraContainer">
+		<div class="domContainer">
+			<div class="text-white">
+				<div class="">
 					Das ist ein tesasdasdast<br>
 					<a href="https://www.google.de">Google Link</a>
 				</div>
+				<div>another div block</div>
 			</div>
 		</div>
 	</div>
