--- a/app/assets/scss/themes/default/landingpage.scss
+++ b/app/assets/scss/themes/default/landingpage.scss
@@ -56,7 +56,7 @@ body {
     touch-action: none;
 }
 .cameraContainer {
-    position: absolute;
+    position: fixed; // google chrome reload bugfix
     pointer-events: none;
 }
 .domContainer {
