--- a/app/templates/landingpage.html.twig
+++ b/app/templates/landingpage.html.twig
@@ -2,13 +2,23 @@
 
 {% block body %}
 	<div class="cameraContainer">
-		<div class="domContainer">
+		<div class="domContainer content-1">
 			<div class="text-white">
 				<div class="">
 					Das ist ein tesasdasdast<br>
 					<a href="https://www.google.de">Google Link</a>
 				</div>
-				<div>another div block</div>
+				<div class="hexagon">another div block</div>
+			</div>
+		</div>
+
+		<div class="domContainer content-2">
+			<div class="text-white">
+				<div class="">
+					jhhgjääghjäghjä<br>
+					<a href="https://www.google.de">sdfsdf</a>
+				</div>
+				<div class="hexagon">ghjghjg</div>
 			</div>
 		</div>
 	</div>
