--- a/app/assets/scss/themes/default/landingpage.scss
+++ b/app/assets/scss/themes/default/landingpage.scss
@@ -70,15 +70,33 @@ body {
     }
 }
 
-.debugContainer {
-    width: 1600px;
-    border: 1px solid red;
-    height: 500px;
-    left: 0;
-    right: 0;
-    top: 160px;
+.hex {
+    margin-top: 30px;
+    width: 104px;
+    height: 60px;
+    background-color: rgb(39, 170, 225);
+    border-color: rgb(39, 170, 225);
+    position: relative;
+    display: inline-block;
+}
+.hex:before {
+    content: " ";
+    width: 0;
+    height: 0;
+    border-bottom: 30px solid;
+    border-color: inherit;
+    border-left: 52px solid transparent;
+    border-right: 52px solid transparent;
     position: absolute;
-
-    margin-left: auto;
-    margin-right: auto;
+    top: -30px;
+}
+.hex:after {
+    content: "";
+    width: 0;
+    position: absolute;
+    bottom: -30px;
+    border-top: 30px solid;
+    border-color: inherit;
+    border-left: 52px solid transparent;
+    border-right: 52px solid transparent;
 }
