--- a/app/templates/landingpage.html.twig
+++ b/app/templates/landingpage.html.twig
@@ -18,7 +18,7 @@
 					jhhgjääghjäghjä<br>
 					<a href="https://www.google.de">sdfsdf</a>
 				</div>
-				<div class="hexagon">ghjghjg</div>
+				<div class="hex"></div>
 			</div>
 		</div>
 	</div>
