[TASK] Make site responsive

--- a/app/templates/landingpage.html.twig
+++ b/app/templates/landingpage.html.twig
@@ -2,7 +2,12 @@
 
 {% block body %}
 	<div class="cameraContainer">
-		<div class="domContainer content-1">
+		<div class="domContainer content-menu">
+			<div class="text-white">
+				Menü
+			</div>
+		</div>
+{#		<div class="domContainer content-1">
 			<div class="text-white">
 				<div class="">
 					Das ist ein tesasdasdast<br>
@@ -10,9 +15,9 @@
 				</div>
 				<div class="hexagon">another div block</div>
 			</div>
-		</div>
+		</div>#}
 
-		<div class="domContainer content-2">
+{#		<div class="domContainer content-2">
 			<div class="text-white">
 				<div class="">
 					jhhgjääghjäghjä<br>
@@ -20,7 +25,7 @@
 				</div>
 				<div class="hex"></div>
 			</div>
-		</div>
+		</div>#}
 	</div>
 {% endblock %}
 
