[TASK] WIP! Prepare touch control

--- a/app/templates/landingpage.html.twig
+++ b/app/templates/landingpage.html.twig
@@ -1,6 +1,16 @@
 {% extends 'html_header.html.twig' %}
 
 {% block body %}
+	<div class="mobileControls">
+		<div class="pan">
+			<div id="pan-circle">
+				<div class="touch-circle"></div>
+			</div>
+		</div>
+		<div class="rotate"></div>
+		<div class="zoom"></div>
+		<div class="scroll"></div>
+	</div>
 	<div class="cameraContainer">
 		<div class="domContainer content-menu">
 			<div class="text-white">
