--- a/app/assets/scss/themes/default/landingpage.scss
+++ b/app/assets/scss/themes/default/landingpage.scss
@@ -100,3 +100,52 @@ body {
     border-left: 52px solid transparent;
     border-right: 52px solid transparent;
 }
+
+.mobileControls {
+    display: block;
+
+}
+
+.pan {
+    position: absolute;
+    z-index: 10;
+    bottom: 10px;
+    left: 10px;
+    #pan-circle {
+        width: 100px;
+        height: 100px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        -webkit-border-radius: 100px;
+        -moz-border-radius: 100px;
+        border-radius: 100px;
+        border: 2px solid #007eff29;
+
+        &:before {
+            content: "";
+            position: absolute;
+            //top: 85%;
+            top: var(--panArrowTop, 85%);
+            //right: calc(100% - 85%);
+            right: var(--panArrowRight, calc(100% - 85%));
+            //transform: translateY(-50%) translateX(50%) rotate(45deg);
+            transform: var(--panArrowTransform, translateY(-50%) translateX(50%) rotate(45deg));
+            width: 0;
+            height: 0;
+            border-top: 5px solid transparent;
+            border-bottom: 5px solid transparent;
+            border-left: 5px solid red;
+        }
+    }
+
+    .touch-circle {
+        width: 25px;
+        height: 25px;
+        -webkit-border-radius: 25px;
+        -moz-border-radius: 25px;
+        border-radius: 25px;
+        border: 2px solid rgb(223 97 7 / 13%);
+        background-color: rgb(0 0 0 / 25%);
+    }
+}
