[TASK] WIP! Prepare touch control

--- a/app/assets/scss/component/bootstrap-framework.scss
+++ b/app/assets/scss/component/bootstrap-framework.scss
@@ -21,3 +21,4 @@
 @import "~bootstrap/scss/containers";
 @import "~bootstrap/scss/grid";
 @import "~bootstrap/scss/helpers";
+@import "~bootstrap/scss/buttons";
