--- a/app/assets/scss/themes/default/landingpage.scss
+++ b/app/assets/scss/themes/default/landingpage.scss
@@ -11,6 +11,7 @@ body {
     font-size: rem(16px);
     background: #c2c7bf;
     overflow: hidden;
+    color: #e5e5e5;
 }
 
 
@@ -106,6 +107,31 @@ body {
 
 }
 
+.modal-reload {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.72);
+    display: none;
+    justify-content: center;
+    align-items: center;
+
+    .modal-reload-content {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+    }
+    .btn-refresh {
+        border: 1px solid rgba(0, 126, 255, 0.26);
+        color: #e5e5e5;
+        background-color: rgba(0, 0, 0, 0.4);
+    }
+}
+
 .pan {
     position: absolute;
     z-index: 10;
@@ -120,22 +146,38 @@ body {
         -webkit-border-radius: 100px;
         -moz-border-radius: 100px;
         border-radius: 100px;
-        border: 2px solid #007eff29;
+        border: 2px solid rgba(0, 0, 0, 0.09);
+        background-color: rgba(10, 10, 10, 0.2);
 
         &:before {
             content: "";
             position: absolute;
-            //top: 85%;
             top: var(--panArrowTop, 85%);
-            //right: calc(100% - 85%);
             right: var(--panArrowRight, calc(100% - 85%));
-            //transform: translateY(-50%) translateX(50%) rotate(45deg);
             transform: var(--panArrowTransform, translateY(-50%) translateX(50%) rotate(45deg));
             width: 0;
             height: 0;
             border-top: 5px solid transparent;
             border-bottom: 5px solid transparent;
-            border-left: 5px solid red;
+            border-left: 5px solid rgba(0, 126, 255, 0.87);
+            opacity: var(--panOpacity, 0);
+        }
+        &:after {
+            content: "";
+            position: absolute;
+            top: var(--afterPanArrowTop, 85%);
+            right: var(--afterPanArrowRight, 15%);
+            transform: var(--afterPanArrowTransform, translateY(-85%) translateX(15%) rotate(45deg));
+            width: 100px;
+            height: 100px;
+            border-top: 3px solid transparent;
+            border-bottom: 3px solid transparent;
+            /* border-right: 13px solid rgba(0, 126, 255, 0.87); */
+            border-left: 3px solid rgba(0, 126, 255, 0.87);
+            opacity: var(--afterPanOpacity, 0);
+            -webkit-border-radius: 100px;
+            -moz-border-radius: 100px;
+            border-radius: 100px;
         }
     }
 
@@ -145,7 +187,7 @@ body {
         -webkit-border-radius: 25px;
         -moz-border-radius: 25px;
         border-radius: 25px;
-        border: 2px solid rgb(223 97 7 / 13%);
-        background-color: rgb(0 0 0 / 25%);
+        border: 2px solid rgba(0, 126, 255, 0.34);
+        //background-color: rgb(0 0 0 / 25%);
     }
 }
