--- a/app/templates/landingpage.html.twig
+++ b/app/templates/landingpage.html.twig
@@ -14,9 +14,12 @@
 				<div class="touch-circle"></div>
 			</div>
 		</div>
-		<div class="rotate"></div>
+		<div class="rotate">
+			<div id="rotate-circle">
+				<div class="touch-rotate"></div>
+			</div>
+		</div>
 		<div class="zoom"></div>
-		<div class="scroll"></div>
 	</div>
 
 	<div class="cameraContainer">
