--- a/app/templates/landingpage.html.twig
+++ b/app/templates/landingpage.html.twig
@@ -14,13 +14,33 @@
 				<div class="touch-circle"></div>
 			</div>
 		</div>
-		<div class="rotate">
-			<div id="rotate-circle">
-				<div class="touch-rotate"></div>
+	</div>
+
+	<div class="control-instructions">
+		<div class="panning">
+			<!--Use the joystick to move-->
+			<span>Verwenden Sie den Joystick zum scrollen</span>
+			<div class="fingerAnimation">
+				<div class="touch-circle"></div>
+				<img src="/build/images/1-finger.svg">
 			</div>
 		</div>
-		<div class="zoom"></div>
+		<div class="zooming">
+			<!--Pinch in and out to adjust camera distance-->
+			<span>2 Finger Zoom zum Einstellen des Kameraabstands</span>
+		</div>
+		<div class="rotate">
+			<!--1 finger rotation to adjust the camera angle-->
+			<span>1 Finger Rotation zum Einstellen des Kamerawinkels</span>
+		</div>
 	</div>
+
+	<div class="rotate">
+		<div id="rotate-circle">
+			<div class="touch-rotate"></div>
+		</div>
+	</div>
+	<div class="zoom"></div>
 
 	<div class="cameraContainer">
 		<div class="domContainer content-menu">
