--- a/app/assets/scss/themes/default/landingpage.scss
+++ b/app/assets/scss/themes/default/landingpage.scss
@@ -106,30 +106,7 @@ body {
     display: none;
 }
 
-.modal-reload {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100vh;
-    background-color: rgba(0, 0, 0, 0.72);
-    display: none;
-    justify-content: center;
-    align-items: center;
 
-    .modal-reload-content {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        text-align: center;
-    }
-    .btn-refresh {
-        border: 1px solid rgba(0, 126, 255, 0.26);
-        color: #e5e5e5;
-        background-color: rgba(0, 0, 0, 0.4);
-    }
-}
 
 .pan {
     position: absolute;
@@ -194,11 +171,13 @@ body {
 
 .control-instructions {
     width: 100%;
-    height: 100vh;
+    height: 100%;
     background-color: rgb(0 0 0 / 32%);
     position: absolute;
     z-index: 10;
     display: none;
+    top: 0;
+    left: 0;
 
     .panning {
         width: 100px;
@@ -253,7 +232,7 @@ body {
             font-size: 12px;
             background-color: rgba(255, 255, 255, 0.69);
             color: rgba(0, 0, 0, 0.51);
-            box-shadow: 0 0 14px 3px rgb(255, 255, 255);
+            box-shadow: 0 0 20px 10px rgb(255, 255, 255);
             padding: 2px;
             text-align: center;
         }
@@ -267,3 +246,67 @@ body {
 .rotate {
 
 }
+
+#canvasRenderer,.obit-controls-gizmo {
+    filter: blur(3px);
+}
+
+.loader-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgb(255 255 255 / 80%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    z-index: 9999;
+}
+
+.loader-animation {
+    display: flex;
+    height: 3px;
+    background-color: rgb(255 255 255 / 23%);
+    .loading-bar-left {
+        height: 3px;
+        background-color: aqua;
+    }
+}
+
+.loader {
+    width: 100px;
+    height: 100px;
+    position: relative;
+}
+
+.loader-text {
+    color: #1a1a1a;
+    font-weight: 300;
+    font-size: 35px;
+    text-align: center;
+    font-family: 'Noto Sans', sans-serif;
+}
+
+@keyframes rotate {
+    0% {
+        transform: perspective(200px) rotateX(0) rotateY(0);
+    }
+    100% {
+        transform: perspective(200px) rotateX(360deg) rotateY(360deg);
+    }
+}
+
+@keyframes pulse {
+    0% {
+        transform: scale(0.8);
+    }
+    50% {
+        transform: scale(1);
+    }
+    100% {
+        transform: scale(0.8);
+    }
+}
+
