--- a/app/templates/landingpage.html.twig
+++ b/app/templates/landingpage.html.twig
@@ -58,25 +58,38 @@
 				Menü
 			</div>
 		</div>
-{#		<div class="domContainer content-1">
-			<div class="text-white">
-				<div class="">
-					Das ist ein tesasdasdast<br>
-					<a href="https://www.google.de">Google Link</a>
-				</div>
-				<div class="hexagon">another div block</div>
+		<div class="domContainer credit-tree">
+			<div class="credit-box">
+				<a href="https://skfb.ly/6QWJM">TreeA</a> by BotondBencsik
+				is licensed under
+				<a href="https://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution</a>
 			</div>
-		</div>#}
+		</div>
 
-{#		<div class="domContainer content-2">
-			<div class="text-white">
-				<div class="">
-					jhhgjääghjäghjä<br>
-					<a href="https://www.google.de">sdfsdf</a>
-				</div>
-				<div class="hex"></div>
+		<div class="domContainer credit-stone">
+			<div class="credit-box">
+				<a href="https://skfb.ly/688pC">Granite stone brown 02</a> by 3dhdscan
+				is licensed under
+				<a href="https://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution</a>
 			</div>
-		</div>#}
+		</div>
+
+		<div class="domContainer credit-grass">
+			<div class="credit-box">
+				<a href="https://skfb.ly/6TQw7">Grass</a> by Fred Drabble
+				is licensed under
+				<a href="https://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution</a>
+			</div>
+		</div>
+
+		<div class="domContainer credit-sign">
+			<div class="credit-box">
+				<a href="https://skfb.ly/6SN7B">A Welcoming Sign</a> by Raneman
+				is licensed under
+				<a href="https://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution</a>
+			</div>
+		</div>
+
 	</div>
 {% endblock %}
 
