--- a/app/assets/scss/component/_vars.scss
+++ b/app/assets/scss/component/_vars.scss
@@ -1,1 +1,5 @@
 $html-font-size: 14px;
+$planeGeometryWidth: 1720px;
+$planeGeometryHeight: 800px;
+$planeGeometryWidthHalf: calc($planeGeometryWidth/2);
+$posLeft: calc($planeGeometryWidthHalf);
