--- a/app/templates/html_header.html.twig
+++ b/app/templates/html_header.html.twig
@@ -22,14 +22,8 @@
 	{% endblock %}
 </head>
 <body>
-{#<div class="debugContainer">
-	Das ist ein test<br>
-	<a href="https://www.google.de">Google Link</a>
-</div>#}
-<!-- Body content -->
-<div id="mainContainer" data-controller="landingpage">
-	{% block body %}{% endblock %}
-</div>
-
+	<div id="mainContainer">
+		{% block body %}{% endblock %}
+	</div>
 </body>
 </html>
