--- a/app/templates/threeDimensional.html.twig
+++ b/app/templates/threeDimensional.html.twig
@@ -9,6 +9,21 @@
 		</div>
 	</div>#}
 
+
+
+
+	<div class="overlay">
+		<div id="versionNotification" class="toast darkToast ms-2 mt-2" role="alert" aria-live="assertive" aria-atomic="true" data-bs-autohide="false">
+			<div class="toast-header">
+				<strong class="me-auto">Version</strong>
+				<button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+			</div>
+			<div class="toast-body">
+				Pre-Release
+			</div>
+		</div>
+	</div>
+
 	<div class="loader-container">
 		<div class="loader-text">Sebastian Meiser</div>
 		<div class="loader-animation">
