--- a/app/assets/scss/component/bootstrap-framework.scss
+++ b/app/assets/scss/component/bootstrap-framework.scss
@@ -20,5 +20,7 @@
 @import "~bootstrap/scss/images";
 @import "~bootstrap/scss/containers";
 @import "~bootstrap/scss/grid";
+@import "~bootstrap/scss/toasts";
+@import "~bootstrap/scss/close";
 @import "~bootstrap/scss/helpers";
 @import "~bootstrap/scss/buttons";
