--- a/app/assets/scss/component/bootstrap-framework.scss
+++ b/app/assets/scss/component/bootstrap-framework.scss
@@ -1,8 +1,9 @@
-@import "~bootstrap/scss/functions";
+/*@import "~bootstrap/scss/functions";
 
 // Include any default variable overrides here
 
 @import "~bootstrap/scss/variables";
+@import "~bootstrap/scss/variables-dark";
 
 // Include any default map overrides here
 
@@ -22,3 +23,8 @@
 @import "~bootstrap/scss/grid";
 @import "~bootstrap/scss/helpers";
 @import "~bootstrap/scss/buttons";
+@import "~bootstrap/scss/toasts";
+@import "~bootstrap/scss/nav";
+@import "~bootstrap/scss/navbar";*/
+
+@import "~bootstrap/scss/bootstrap";
