--- a/app/templates/landingpage.html.twig
+++ b/app/templates/landingpage.html.twig
@@ -1,9 +1,45 @@
 {% extends 'html_header.html.twig' %}
 
 {% block body %}
-	<div class="">
-		Landingpage
+	<div data-controller="landingpage"></div>
 
+	<div class="">
+		<div class="d-flex justify-content-between sm-icons ">
+			<div class="col-3 margin-left mt-5">
+				<div class="m-3 fs-4">
+					<a class="d-inline-block" href="https://github.com/s-meiser" target="_blank">
+						<i class="fa-brands fa-github"></i>
+					</a>
+					<a class="mx-2 d-inline-block" href="mailto:sebastian.meiser@gmail.com" target="_blank">
+						<i class="fa-regular fa-envelope"></i>
+					</a>
+				</div>
+			</div>
+			<div class="col-3 margin-right mt-5">
+				<div class="p-3 border ">
+					<div class="d-flex justify-content-between">
+						<div class="col text-uppercase text-end">
+							Choose wisely, you must
+						</div>
+					</div>
+
+				</div>
+			</div>
+		</div>
+		<div class="d-flex justify-content-center align-items-center align-self-center px-4 vh-75 lp-box">
+			<div class="row gx-5 font d-flex align-items-center">
+				<div class="col text-center">
+					<div id="animateDiv" class="p-3 border bg-creme box-shadow min-height d-flex align-items-center">
+						Enter my Website in 2D
+					</div>
+				</div>
+				<div class="col ">
+					<div class="p-3 border bg-creme box-shadow min-height d-flex align-items-center">
+						Enter my Website in 3D
+					</div>
+				</div>
+			</div>
+		</div>
 	</div>
 
 {% endblock %}
