--- a/app/templates/landingpage.html.twig
+++ b/app/templates/landingpage.html.twig
@@ -29,14 +29,18 @@
 		<div class="d-flex justify-content-center align-items-center align-self-center px-4 vh-75 lp-box">
 			<div class="row gx-5 font d-flex align-items-center">
 				<div class="col text-center">
-					<div id="animateDiv" class="p-3 border bg-creme box-shadow min-height d-flex align-items-center">
-						Enter my Website in 2D
-					</div>
+					<a class="link-unstyled" href="{{ path('flat') }}">
+						<div id="animateDiv" class="p-3 border bg-creme box-shadow min-height d-flex align-items-center">
+							Enter Website in 2D
+						</div>
+					</a>
 				</div>
 				<div class="col ">
-					<div class="p-3 border bg-creme box-shadow min-height d-flex align-items-center">
-						Enter my Website in 3D
-					</div>
+					<a class="link-unstyled" href="{{ path('threeDimensional') }}">
+						<div id="animateDiv" class="p-3 border bg-creme box-shadow min-height d-flex align-items-center">
+							Enter Website in 3D
+						</div>
+					</a>
 				</div>
 			</div>
 		</div>
